hw06/test/zm-array-exp-index-error.fmj
public int main() {
  int[] n;
  int[] n2;
  int a=0;
  int b=1;
  n[] = {a, b};
  return n[n2]; // error
}